--- a/Stream cyper encription/Stream cyper encription.csproj
+++ b/Stream cyper encription/Stream cyper encription.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp.Views" Version="3.116.1" />
+  </ItemGroup>
+
 </Project>
